--- a/pom.xml
+++ b/pom.xml
@@ -183,5 +183,12 @@
       <version>RELEASE</version>
     </dependency>
 
+    <!--MD5加密-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.3.2</version>
+    </dependency>
+
   </dependencies>
 </project>
