--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
       <artifactId>spring-aspects</artifactId>
       <version>4.3.7.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-websocket</artifactId>
+      <version>4.3.7.RELEASE</version>
+    </dependency>
+
 
     <!-- mybatis -->
     <dependency>
