--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,18 @@
       <artifactId>spring-websocket</artifactId>
       <version>4.3.7.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-messaging</artifactId>
+      <version>4.3.7.RELEASE</version>
+    </dependency>
+      <!--webSocket测试需要-->
+      <dependency>
+          <groupId>org.apache.tomcat.embed</groupId>
+          <artifactId>tomcat-embed-websocket</artifactId>
+          <version>9.0.7</version>
+          <scope>test</scope>
+      </dependency>
 
 
     <!-- mybatis -->
