调整对话缓存，修改样式，修复部分bug

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/weitao
+jdbc.url=jdbc:mysql://localhost:3306/weitao?useSSL=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=19950616
+jdbc.password=17876253432
